// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Date component should render Friday as default test enzyme renders Tuesday in snapshot 1`] = `
<React.Fragment>
  
      Tuesday
      8
      May
      2018
    
</React.Fragment>
`;

exports[`Date component should render Friday as default test enzyme snapshot works 1`] = `
<React.Fragment>
  
      Friday
      11
      May
      2018
    
</React.Fragment>
`;
